// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage component Should render correctly 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            Bad credentials
          </ForwardRef>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              Bad credentials. Check the konnector fields and run the connection again.
            </ForwardRef>
          </div>
        </React.Fragment>
      </Stack>
    </div>
  </Stack>
</div>
`;

exports[`ErrorMessage component Should render correctly if two fa session expired 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            Relaunch the connexion to the service to fetch your data
          </ForwardRef>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              The last connexion to the service failed; please launch it again. You may have to provide a validation code.
            </ForwardRef>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <withI18n(withLocales(withI18n(withClient(WithMutations(TriggerLauncher)))))
        trigger={Object {}}
      >
        [Function]
      </withI18n(withLocales(withI18n(withClient(WithMutations(TriggerLauncher)))))>
    </div>
  </Stack>
</div>
`;

exports[`ErrorMessage component Should render correctly if wrong twofa code error 1`] = `
<div
  className="Infos Infos--danger u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="Infos-description"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef
            className="u-pomegranate"
            ellipsis={false}
            tag="div"
          >
            Wrong two-factore code provided
          </ForwardRef>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef
              className="u-pl-half"
              ellipsis={false}
              tag="div"
            >
              The two-factor code provided is wrong, please start again.
            </ForwardRef>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <withI18n(withLocales(withI18n(withClient(WithMutations(TriggerLauncher)))))
        trigger={Object {}}
      >
        [Function]
      </withI18n(withLocales(withI18n(withClient(WithMutations(TriggerLauncher)))))>
    </div>
  </Stack>
</div>
`;
